test/arrays/bradc/assignArithArrToDom.good
assignArithArrToDom.chpl:5: error: Illegal assignment to a rectangular domain
